# mediapipe-solutions-cpp

./: README.md  WORKSPACE
mediapipe-solutions/: BUILD.bazel  any.h  solution_base.cc  solution_base.h
mediapipe-solutions/hands/: hands.cc  hands.h  test.cc
mediapipe-solutions/util/: util.h
