# Copyright 2019 The MediaPipe Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])  # Apache 2.0

cc_library(
	name = "solution_base",
	hdrs = ["solution_base.h"],
	srcs = [
		"any.h", "util/util.h",
		"solution_base.cc"
	],
	deps = [
		"@com_google_mediapipe//mediapipe/framework:calculator_cc_proto",
		"@com_google_mediapipe//mediapipe/framework:calculator_framework",
		"@com_google_mediapipe//mediapipe/framework/formats:classification_cc_proto",
		"@com_google_mediapipe//mediapipe/framework/formats:detection_cc_proto",
		"@com_google_mediapipe//mediapipe/framework/formats:image_frame",
		"@com_google_mediapipe//mediapipe/framework/formats:landmark_cc_proto",
		"@com_google_mediapipe//mediapipe/framework/formats:matrix",
		"@com_google_mediapipe//mediapipe/framework/formats:rect_cc_proto",
		"@com_google_mediapipe//mediapipe/framework/port:parse_text_proto",
		"@com_google_absl//absl/strings",
		"@com_google_absl//absl/flags:flag",
		"@com_google_absl//absl/types:span"
	],
)

cc_library(
	name = "hands",
	hdrs = ["hands/hands.h"],
	srcs = ["hands/hands.cc"],
	data = [
		"@com_google_mediapipe//mediapipe/modules/palm_detection:palm_detection.tflite",
		"@com_google_mediapipe//mediapipe/modules/hand_landmark:hand_landmark.tflite",
		"@com_google_mediapipe//mediapipe/modules/hand_landmark:handedness.txt",
	],
	deps = [
		"solution_base",
		"@com_google_mediapipe//mediapipe/graphs/hand_tracking:desktop_tflite_calculators",
		"@com_google_mediapipe//mediapipe/modules/palm_detection:palm_detection_cpu",
		"@com_google_mediapipe//mediapipe/modules/hand_landmark:hand_landmark_tracking_cpu",
	],
)

cc_binary(
	name = "hands-test",
	srcs = ["hands/test.cc"],
	deps = [
		"solution_base", "hands",
		"//third_party:opencv",
	],
)
